--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -1,6 +1,6 @@
-name: delineate
 
 services:
+  # API Service
   delineate-app:
     build:
       context: ..
@@ -12,15 +12,52 @@ services:
     env_file:
       - ../.env
     environment:
-      - NODE_ENV=development
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://delineate-jaeger:4318
+      NODE_ENV: development
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://delineate-jaeger:4318
     depends_on:
       - delineate-jaeger
+      - minio
+      - init-minio
 
+  # Jaeger Service
   delineate-jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
       - "16686:16686"
       - "4318:4318"
     environment:
-      - COLLECTOR_OTLP_ENABLED=true
+      COLLECTOR_OTLP_ENABLED: "true"
+
+  # MinIO Service
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data
+
+  # Init container to create 'downloads' bucket
+  init-minio:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+        # Retry until MinIO is ready
+        until mc alias set local http://minio:9000 minioadmin minioadmin; do
+          echo 'Waiting for MinIO...'
+          sleep 1
+        done
+        # Create bucket if it doesn't exist
+        mc mb local/downloads || true
+        echo 'Bucket created successfully!'
+      "
+
+volumes:
+  minio_data:
+
