--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches: [test-ci-workflow]
   pull_request:
-    branches: [main, master]
+    branches: [test-ci-workflow]
+  workflow_dispatch:
 
 jobs:
   lint:
