--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -1,3 +1,4 @@
+
 name: delineate
 
 services:
@@ -10,5 +11,44 @@ services:
     env_file:
       - ../.env
     environment:
-      - NODE_ENV=production
+      NODE_ENV: production
+    depends_on:
+      - minio
+      - init-minio
     restart: unless-stopped
+
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data
+    ports:
+      - "9000:9000"
+    volumes:
+      - minio_data:/data
+    restart: unless-stopped
+
+  init-minio:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+        # wait for MinIO to be reachable
+        until mc alias set local http://minio:9000 minioadmin minioadmin >/dev/null 2>&1; do
+          echo 'Waiting for MinIO...'
+          sleep 1
+        done
+        # create bucket if not exists
+        mc mb --ignore-existing local/downloads
+        echo 'Bucket ensured: downloads'
+        # sleep a moment so the API's depends_on sees minio fully ready
+        sleep 1
+      "
+    restart: "no"
+
+volumes:
+  minio_data:
+
