--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -1,5 +1,6 @@
-name: delineate
+
 services:
+  # API Service
   delineate-app:
     build:
       context: ..
@@ -18,6 +19,7 @@ services:
       - minio
       - init-minio
 
+  # Jaeger Service
   delineate-jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
@@ -26,6 +28,7 @@ services:
     environment:
       COLLECTOR_OTLP_ENABLED: "true"
 
+  # MinIO Service
   minio:
     image: minio/minio
     container_name: minio
@@ -38,6 +41,7 @@ services:
       - minio_data:/data
     command: server /data
 
+  # Init container to create 'downloads' bucket
   init-minio:
     image: minio/mc
     depends_on:
@@ -56,3 +60,4 @@ services:
 
 volumes:
   minio_data:
+
