--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, master, test-ci-workflow]
+    branches: [main, master]
   pull_request:
-    branches: [main, master, test-ci-workflow]
+    branches: [main, master]
   workflow_dispatch:
 
 jobs:
